--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,15 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase configuration files
+google-services.json
+GoogleService-Info.plist
+
+# Environment files
+.env*
+*.env
+
+# Firebase local configuration
+.firebase/
+firebase-debug.log
