--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_auth: ^6.1.0
   cloud_firestore: ^6.0.2
   flutter_launcher_icons: ^0.14.4
+  path_provider: ^2.1.5
+  provider: ^6.1.5
 
 flutter_launcher_icons:
   android: true
