--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   path_provider: ^2.1.5
   provider: ^6.1.5
+  url_launcher: ^6.3.2
 
 flutter_launcher_icons:
   android: true
