--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path_provider: ^2.1.5
   provider: ^6.1.5
   url_launcher: ^6.3.2
+  shared_preferences: ^2.1.1
 
 flutter_launcher_icons:
   android: true
