--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   provider: ^6.1.5
   url_launcher: ^6.3.2
   shared_preferences: ^2.1.1
+  google_sign_in: ^6.2.1
 
 flutter_launcher_icons:
   android: true
